--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/SwitchInstinct/Turnbull-Still-PM">View on GitHub</a>
-
-          <h1 id="project_title">Turnbull-still-pm</h1>
+       
+          <h1 id="project_title">YES/h1>
           <h2 id="project_tagline"></h2>
 
   
@@ -29,7 +28,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
-<a id="yes" class="anchor" href="#yes" aria-hidden="true"><span class="octicon octicon-link"></span></a>YES</h1>
+<a id="yes" class="anchor" href="#yes" aria-hidden="true"><span class="octicon octicon-link"></span></a></h1>
       </section>
     </div>
 
