--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
        
-          <h1 id="project_title">YES/h1>
+          <h1 id="project_title">YES</h1>
           <h2 id="project_tagline"></h2>
 
   
@@ -27,8 +27,8 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>
-<a id="yes" class="anchor" href="#yes" aria-hidden="true"><span class="octicon octicon-link"></span></a></h1>
+        <a href="https://twitter.com/JadenHarris95" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @JadenHarris95</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
       </section>
     </div>
 
