--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
         <header class="inner">
        
           <h1 id="project_title">YES</h1>
-          <h2 id="project_tagline"></h2>
-
-  
+          <h2 id="project_tagline">gg</h2>
         </header>
     </div>
 
