--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- MAIN CONTENT -->
  
         <div id="main_content_wrap" class="outer" style="position: fixed; bottom: 0; width: 100%; left:0">
-      
+      hello test
     </section>
     </div>
     
