--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
         <header class="inner">
        
           <h1 id="project_title">YES</h1>
-          <h2 id="project_tagline">gg</h2>
+          <h2 id="project_tagline"></h2>
         </header>
     </div>
 
     <!-- MAIN CONTENT -->
  
         <div id="main_content_wrap" class="outer" style="position: fixed; bottom: 0; width: 100%; left:0">
-      hello test
+      <a href="https://twitter.com/share" class="twitter-share-button" data-via="JadenHarris95" data-size="large" data-hashtags="Auspol">Tweet</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
     </section>
     </div>
     
