--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
-      <footer class="inner">
+      <footer class="inner" style="position: fixed; bottom: 0; background: #eee; height: 130px; left: 0">
+        
         <a href="https://twitter.com/share" class="twitter-share-button" data-via="JadenHarris95" data-size="large" data-hashtags="Auspol">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
       </footer>
