--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         
         <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://IsTurnbullStillPM.com" data-via="JadenHarris95" data-size="large" data-hashtags="Auspol">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+        <a href="https://twitter.com/JadenHarris95" class="twitter-follow-button" data-show-count="false">Follow @JadenHarris95</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
          </footer>
     </div>
 
