--- a/index.html
+++ b/index.html
@@ -10,12 +10,21 @@
 
     <title>YES m8</title>
   </head>
-
+  
   <body>
-Rekt tone
+  Rekt tone
+
+    <!-- JAVA FB-->
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.4";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
     <!-- HEADER -->
   
-
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
@@ -27,11 +36,14 @@ Rekt tone
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner" style="position: fixed; bottom: 0; background: #eee; height: 30px; width: 100px; left: 0">
-        
+
         <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://IsTurnbullStillPM.com" data-via="JadenHarris95" data-size="large" data-hashtags="Auspol">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
         </div>
 
+<div id="footer_wrap" class="outer">
+      <footer class="inner" style="position: fixed; bottom: 0; background: #eee; height: 30px; width: 100px; right: 0">
+<div class="fb-share-button" data-href="http://isturnbullstillpm.com/" data-layout="button_count"></div>
     
 
   </body>
