--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
         </div>
         
         
+    </div>
+
         <div id="footer_wrap" class="outer">
       <footer class="inner" style="position: fixed; bottom: 0; background: #eee; height: 30px; width: 100px; left: 0">
 
-Jaden Harris
+
   </body>
 </html>
