--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://IsTurnbullStillPM.com" data-via="JadenHarris95" data-size="large" data-hashtags="Auspol">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
         </div>
-        
+        <div class="fb-share-button" data-href="http://isturnbullstillpm.com/" data-layout="button_count"></div>
 
   </body>
 </html>
