--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
   js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.4";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
+        <div class="fb-share-button" data-href="http://isturnbullstillpm.com/" data-layout="button_count"></div>
+
 
   </body>
 </html>
