--- a/index.html
+++ b/index.html
@@ -34,6 +34,31 @@
     </div>
 
     <!-- FOOTER  -->
+   <table style="padding-top: 0; margin-top: 0; background-color: #2e2c2d;" cellpadding="0" cellspacing="0" height="250px" width="100%">
+                    <tbody>
+                      <tr>
+                        <td align="center" valign="top">
+                          <table style="padding-top: 45px; color: #838283; font-family: Arial, Sans-Serif; font-size: 13px;" width="605px">
+                            <tbody>
+                              <tr>
+                                <td style="font-family: Arial, Sans-Serif; font-size: 14px; font-weight: bold;line-height:14px;" valign="top" align="center">
+                                  <span style="color: #fff;">Follow us</span>
+                                  <br>
+                                  <br>
+                                  <a <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+                                  </a>
+                                  <a 
+                                  
+                                  </a>  </td>
+                              </tr>
+                            </tbody>
+                          </table>
+   
+   
+   
+   
+   
+   
     <div id="footer_wrap" class="outer">
       <footer class="inner" style="position: fixed; bottom: 0; background: #eee; height: 30px; width: 200px; left: 0">
         <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://IsTurnbullStillPM.com" data-via="JadenHarris95" data-size="large" data-hashtags="Auspol">Tweet</a>
