--- a/index.html
+++ b/index.html
@@ -50,14 +50,13 @@
     </div>
 <body>
 
-    <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
 
                   <table cellpadding="0" cellspacing="0" width="100%">
                     <tbody>
                       <tr>
                         <td style="background-color:#00b3e9;height:50px;width:100%;" align="center"></td>
-                        YES TEST
+                        <H1> YES TEST</H1>
                       </tr>
                     </tbody>
                   </table>
