--- a/index.html
+++ b/index.html
@@ -42,21 +42,14 @@
   
   
    <!-- MAIN CONTENT -->
-  <body>
-    <div id="body" class="outer">
-      <section id="main_content" class="inner">
-<a id="yes" class="anchor" href="#yes" aria-hidden="true"><span class="octicon octicon-link"></span></a>YES1</h1>
-      </section>
-    </div>
-<body>
-
-    <div id="footer_wrap" class="outer">
+ 
+    <div id="Body" class="inner">
 
                   <table cellpadding="0" cellspacing="0" width="100%">
                     <tbody>
                       <tr>
                         <td style="background-color:#00b3e9;height:50px;width:100%;" align="center"></td>
-                        <H1> YES TEST</H1>
+                        <H1> YES TEST 0</H1>
                       </tr>
                     </tbody>
                   </table>
@@ -65,6 +58,7 @@
                       <tr>
                         <td align="center" valign="top">
                           <table style="padding-top: 45px; color: #838283; font-family: Arial, Sans-Serif; font-size: 13px;" width="605px">
+                            <H1> YES TEST1</H1>
                             
 
                                  
@@ -73,6 +67,4 @@
 
                                <div class="fb-share-button" data-href="http://isturnbullstillpm.com" data-layout="button" data-mobile-iframe="true"></div>
 
-  
-  
-</html>
+ </body>
