--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <tbody>
                       <tr>
                         <td style="background-color:#00b3e9;height:50px;width:100%;" align="center"></td>
-                        <H1> YES TEST 0</H1>
+                        <h1 style="color: #222; font-size: 30px; font-weight: normal;"> YES </h1>
                       <tr>
                         <td align="center" valign="top">
                           <table style="padding-top: 45px; color: #838283; font-family: Arial, Sans-Serif; font-size: 13px;" width="605px">
