--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
                     <tbody>
                       <tr>
                         <td style="background-color:#00b3e9;height:50px;width:100%;" align="center"></td>
-                        <h1 style="color: #ffffff; font-size: 30px; font-weight: normal;"> YES </h1>
+                        <h1 style="color: #ffffff; font-size: 30px; font-weight: normal;"> </h1>
                       <tr>
                         <td align="center" valign="top">
-                          <table style="padding-top: 45px; color: #838283; font-family: Arial, Sans-Serif; font-size: 13px;" width="605px">
-                            <H1> YES TEST1</H1>
+                          <table style="padding-top: 45px; color: #ffffff; font-family: Arial, Sans-Serif; font-size: 20px;" width="605px">
+                            <H1> YES </H1>
                             
 
                                  
