--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                     <tbody>
                       <tr>
                         <td style="background-color:#00b3e9;height:50px;width:100%;" align="center"></td>
-                        <h1 style="color: #ffffff; font-size: 30px; font-weight: normal;"> </h1>
+                        <h1 style="color:#e5e5e5; font-size: 30px; font-weight: normal;"> </h1>
                       <tr>
                         <td align="center" valign="top">
-                          <table style="padding-top: 45px; color: #ffffff ; font-family: Arial, Sans-Serif; font-size: 16px;" width="605px">
+                          <table style="padding-top: 45px; color: #e5e5e5 ; font-family: Arial, Sans-Serif; font-size: 30px;" width="605px">
                             <H1> YES </H1>
                             
 
