--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Turnbull-still-pm : ">
-
+    <meta name="description" content="Is Turnbull still PM">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <title> </title>
@@ -49,14 +48,12 @@
                     <tbody>
                       <tr>
                         <td style="background-color:#00b3e9;height:50px;width:100%;" align="center"></td>
-                        <h1 style="color:#e5e5e5; font-size: 30px; font-weight: normal;"> </h1>
+                        <h1 style="color:#e5e5e5; font-size: 30px; font-weight: normal;"> YES 2 </h1>
                       <tr>
                         <td align="center" valign="top">
-                          <table style="padding-top: 45px; color: #e5e5e5 ; font-family: Arial, Sans-Serif; font-size: 30px;" width="605px">
-                            <H1> YES </H1>
+                            <h1 style="color: #e5e5e5; font-size: 30px; font-weight: normal;"> YES </h1>
                             
 
-                                 
                                    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                                   </div>
 
