--- a/index.html
+++ b/index.html
@@ -48,15 +48,14 @@
                     <tbody>
                       <tr>
                         <td style="background-color:#00b3e9;height:50px;width:100%;" align="center"></td>
-                        <h1 style="color:#e5e5e5; font-size: 30px; font-weight: normal;"> YES 2 </h1>
+                        <h1 style="color:#e5e5e5; font-size: 30px; font-weight: normal;">  </h1>
                       <tr>
                         <td align="center" valign="top">
                             <h1 style="color: #e5e5e5; font-size: 30px; font-weight: normal;"> YES </h1>
                             
 
-                                   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                                   </div>
-
+                               <a href="https://twitter.com/share" class="twitter-share-button" data-via="JadenHarris95" data-size="large" data-related="JadenHarris95" data-hashtags="Ausvotes">Tweet</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                                <div class="fb-share-button" data-href="http://isturnbullstillpm.com" data-layout="button" data-mobile-iframe="true"></div>
 
  </body>
