--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             
 
                                   </div>
-                               <a href="https://twitter.com/share" class="twitter-share-button" data-via="JadenHarris95" data-size="large" data-related="JadenHarris95" data-hashtags="Ausvotes">Tweet</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+                               <a href="https://twitter.com/share" class="twitter-share-button" data-via="JadenHarris95" data-related="JadenHarris95" data-hashtags="Ausvotes">Tweet</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                                <div class="fb-share-button" data-href="http://isturnbullstillpm.com" data-layout="button" data-mobile-iframe="true"></div>
 
  </body>
