--- a/index.html
+++ b/index.html
@@ -41,11 +41,14 @@
   
   
    <!-- MAIN CONTENT -->
+<table>
 <tr>
-<td style="background-color:#00b3e9;height:50px;width:50;" align="right"></td>
  <div class="fb-share-button" data-href="http://isturnbullstillpm.com" data-layout="button" data-mobile-iframe="true"></div>
+ </tr>
+ <tr>
 <a href="https://twitter.com/share" class="twitter-share-button" data-via="JadenHarris95" data-related="JadenHarris95" data-hashtags="Ausvotes">Tweet</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
  </tr>
+ </table>
  
     <div id="Body" class="inner">
 
