--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   
   
    <!-- MAIN CONTENT -->
-<table>
+<table style= padding: 0; margin: 0; background-color: #fff; color: #222; font-size: 16px;" bgcolor="#fff" border="0" cellpadding="0" cellspacing="0" width="100%">
 <tr>
  <div class="fb-share-button" data-href="http://isturnbullstillpm.com" data-layout="button" data-mobile-iframe="true"></div>
  </tr>
@@ -49,6 +49,9 @@
 <a href="https://twitter.com/share" class="twitter-share-button" data-via="JadenHarris95" data-related="JadenHarris95" data-hashtags="Ausvotes">Tweet</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
  </tr>
  </table>
+
+ 
+ 
  
     <div id="Body" class="inner">
 
