--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <tbody>
                       <tr>
                         <td style="background-color:#00b3e9;height:50px;width:100%;" align="center"></td>
-                        <h1 style="color:#e5e5e5; font-size: 30px; font-weight: normal;">  </h1>
+                        <h1 style="color:#000000; font-size: 30px; font-weight: normal;">  </h1>
                       <tr>
                         <td align="center" valign="top">
                             <h1 style="color: #e5e5e5; font-size: 30px; font-weight: normal;"> YES </h1>
