--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
-
-
-
-
-
-
-
-    <!-- HEADER -->
+<!-- HEADER -->
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="Is Turnbull still PM">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title> </title>
+   <meta content="Is Turnbull Still PM?"name=description>
+    <title> Is Turnbull Still PM? </title>
   </head>
+
+
+
+
+
+
+    
   
   
    <!-- MAIN CONTENT -->
