--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         </tr>
                       <tr>
                         <td align="center" valign="top">
-                            <h1 style="color: #e5e5e5; font-size: 50px; font-weight: normal;"> YES </h1>
+                            <h1 style="color: #e5e5e5; font-size: 50px; font-weight: normal;"> YES (just) </h1>
                      </tr>
                           <tr> 
                              <td align="center" valign="top">
