--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                         </tr>
                       <tr>
                         <td align="center" valign="top">
-                            <h1 style="color: #e5e5e5; font-size: 50px; font-weight: normal;"> BARElY </h1>
+                            <h1 style="color: #e5e5e5; font-size: 50px; font-weight: normal;"> BARELY </h1>
                      </tr>
                           <tr> 
-                             <td align="center" valign="top">
+                   
                                <iframe src="https://scontent-syd2-1.xx.fbcdn.net/v/t1.0-9/39521882_10211746329206371_9140404551575142400_n.jpg?_nc_cat=0&oh=d95e8780e197244bb56e7ef98ee1d4c7&oe=5C3A81A1" width="480" height="370" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/artist-persona-malcolm-ZQJk9lb8fvNcs"></a></p>
                              </tr>
                              
