--- a/index.html
+++ b/index.html
@@ -1,13 +1,3 @@
-</head>
-<body class='pt-editor pt-page-ext-1 viewingPage desktop'>
-    <div class='viewer'>
-        <div id="wrapper-full">
-            <div id="pt-site" class='css-form pt-site-view'>
-    <script type="text/javascript"></script><div id='pt-page-1' class='pt-page'>    <div id='pt-layout' class='pt-layout'><div id='pt-section-wrapper-1' class='pt-section-wrapper'><div id='pt-section-1' style='background: rgba(0,0,0, 0); background-size: cover; background-position: center; font-size: 0;' class='pt-section transparentbackground'><div id='pt-section-canvas-1'  class='pt-section-canvas sectionViewing'><div id='pt-section-1-overlay-1' style='position: absolute;'><div id='pt-section-1-overlay-wrapper-1' class='overlay-wrapper makevisible'><div id='pt-section-1-overlay-1-content' class='pt-overlay'><img class='overlay-image' src='https://d3r4tb575cotg3.cloudfront.net/static/Screen%20Shot%202018-08-21%20at%2012.05.39%20am.png' alt=''></div></div></div><div id='pt-section-1-overlay-2' style='position: absolute;' data-sr="ease-in over 1.00s wait 0.00s"><div id='pt-section-1-overlay-wrapper-2' class='overlay-wrapper makevisible'><div id='pt-section-1-overlay-2-content' class='pt-overlay'><div id='pt-section-1-overlay-2-content-text' class='overlay-text nobackgroundcolor'><h1><b>YES&nbsp;</b></h1></div></div></div></div><div id='pt-section-1-overlay-3' style='position: absolute;' data-sr="ease-in over 1.00s wait 0.00s"><div id='pt-section-1-overlay-wrapper-3' class='overlay-wrapper makevisible'><div id='pt-section-1-overlay-3-content' class='pt-overlay'><img class='overlay-image' src='https://d3r4tb575cotg3.cloudfront.net/static/dutton.jpg' alt=''></div></div></div></div></div></div>    </div></div><script src='https://d2s3n99uw51hng.cloudfront.net/min/scrollReveal0001.min.js'></script><script>    (function($) {        'use strict';        window.sr= new scrollReveal({            reset: false,            move: '50px',            mobile: true        });    })();</script>            </div>
-        </div>
-    </div>
-
-    
-    
-</body>
-</html>
+<h1> 
+    YES
+</h1>
