--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<h1> 
-    YES
-</h1>
+<h1 style="text-align: center;"><span style="color: #008000;">&nbsp;Yes</span></h1>
+<p><img class="overlay-image" src="https://d3r4tb575cotg3.cloudfront.net/static/dutton.jpg" alt="" width="583" height="387" /></p>
+<p style="text-align: center;"><a class="twitter-share-button" href="https://twitter.com/share?ref_src=twsrc%5Etfw" data-size="large" data-related="jadenharris95" data-show-count="false">Tweet</a></p>
