--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<h1 style="text-align: center;"><span style="color: #008000;">&nbsp;Yes</span></h1>
-<p><img class="overlay-image" src="https://d3r4tb575cotg3.cloudfront.net/static/dutton.jpg" alt="" width="583" height="387" /></p>
+<h1 style="text-align: center;"><span style="color: #008000;">&nbsp;YES until thursday? </span></h1>
+<p><img class="overlay-image" src="https://nnimgt-a.akamaihd.net/transform/v1/crop/frm/GJZ5TVpAk84wrTzsQfLQRB/b48f0e19-2b3f-4611-aad5-f4c83136e307.jpg/r0_12_800_462_w1200_h678_fmax.jpg" alt="" width="583" height="387" /></p>
 <p style="text-align: center;"><a class="twitter-share-button" href="https://twitter.com/share?ref_src=twsrc%5Etfw" data-size="large" data-related="jadenharris95" data-show-count="false">Tweet</a></p>
