--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </script>
 
 <body>
-<h1 style="text-align: center;">YES - But not leader of the Libs</h1>
+<h1 style="text-align: center;">NO</h1>
 <p><img style="display: block; margin-left: auto; margin-right: auto;" src="https://nnimgt-a.akamaihd.net/transform/v1/crop/frm/silverstone-feed-data/e94d2797-acdb-4e07-82dc-3fdccbf7f284.jpg/r0_0_800_600_w1200_h678_fmax.jpg" alt="" width="800" height="600" /></p>
 <p>&nbsp;</p>
 <p style="text-align: center;"><a class="twitter-share-button" href="https://twitter.com/share?ref_src=twsrc%5Etfw" data-size="large" data-text="Is Turnbull Still Prime Minister? " data-via="jadenharris95" data-hashtags="auspol" data-related="jadenharris95" data-show-count="false">Tweet</a></p>
