--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 <h1 style="text-align: center;">NO</h1>
-<p><img style="display: block; margin-left: auto; margin-right: auto;" src="https://nnimgt-a.akamaihd.net/transform/v1/crop/frm/silverstone-feed-data/e94d2797-acdb-4e07-82dc-3fdccbf7f284.jpg/r0_0_800_600_w1200_h678_fmax.jpg" alt="" width="800" height="600" /></p>
+<p><img style="display: block; margin-left: auto; margin-right: auto;" src="https://cdn.newsapi.com.au/image/v1/b190cebf464bc3ebbb624a9862bc8af1?width=1024" alt="" width="800" height="600" /></p>
 <p>&nbsp;</p>
 <p style="text-align: center;"><a class="twitter-share-button" href="https://twitter.com/share?ref_src=twsrc%5Etfw" data-size="large" data-text="Is Turnbull Still Prime Minister? " data-via="jadenharris95" data-hashtags="auspol" data-related="jadenharris95" data-show-count="false">Tweet</a></p>
 </body>
